--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,15 @@ dependencies:
   http: ^0.13.5
   flutter_localizations:
     sdk: flutter
+
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.6
 
 flutter:
   uses-material-design: true
